# QtQuickControls2.TreeView

./: .gitignore  .travis.yml  CMakeLists.txt  FlattenedProxyModel.cpp  FlattenedProxyModel.h  README.md  TreeItemDelegate.qml  TreeNode.cpp  TreeNode.h  TreeView.qml  main.cpp  main.qml  qml.qrc
example/: CMakeLists.txt  main.cpp  main.qml  qml.qrc  qtquickcontrols2.conf
imports/: TreeItemView.qml  TreeView.qml
lib/: TreeItemViewModel.h  TreeViewModel.h
tests/: CMakeLists.txt  TreeViewModelTests.cpp
